# pixeditor_v2

./: .gitignore  colorPicker.py  data.py  dialogs.py  dock_onionskin.py  dock_options.py  dock_palette.py  dock_timeline.py  dock_tools.py  import_export.py  main.py  pixeditor.py  pyproject.toml  widget.py
